trunk/Archive2/3c/bfd604601847ba/output
main.cpp:4:51: error: expected ')'
    long int t = static_cast<long int> (time(NULL);
                                                  ^
main.cpp:4:40: note: to match this '('
    long int t = static_cast<long int> (time(NULL);
                                       ^
1 error generated.
